# VisualX-Engine-C

./: .gitignore  README.md
application/: CMakeLists.txt  main.c  main.cpp
application/include/applications/: editor.h  engine.h  launcher.h
application/include/backend/: nuklear_config.h  shader.h
application/include/backend/parser/: parser.h
application/include/backend/rendering/: mesh.h  shader.h  texture.h
application/include/backend/scene/: light.h  scene.h  scene_object.h  transform.h
application/include/backend/scripting/: script.h
application/include/engine/: visualx.h
application/include/scripting/: script.h
application/shaders/: fragment.glsl  vertex.glsl
application/src/applications/: engine.c
application/src/backend/: nuklear_impl.c  shader.c
application/src/backend/parser/: parser.c
application/src/backend/rendering/: mesh.c  shader.c  texture.c
application/src/backend/scene/: light.c  scene.c  scene_object.c
application/src/engine/: visualx.c
application/src/impl/: stb_impl.c
application/src/scripting/: script.c
lib/core/: CMakeLists.txt  main.c
lib/core/include/: core.h  core_backend.h
lib/core/include/containers/: core_map.h  core_vector.h
lib/core/include/core/: core_file.h  core_string.h
lib/core/include/oop/: core_class.h  core_member.h  core_method.h  core_object.h  core_oop.h  core_oop_types.h  core_oop_visibility.h
lib/core/src/containers/: core_map.c  core_vector.c
lib/core/src/core/: core_file.c  core_string.c
lib/core/src/oop/: core_class.c  core_member.c  core_method.c  core_object.c
lib/glad/include/glad/: gl.h
lib/glad/src/: gl.c
lib/nuklear/: LICENSE  nuklear_glfw_gl3.h  nuklear_glfw_vulkan.h  nuklear_sdl_vulkan.h
lib/tinyfiledialogs/: tinyfiledialogs.c
